# boilerroom

./: .gitignore  PKGBUILD  README.md  boilerroom-setup.sh  build-appimage-alt.sh  build-appimage.sh  build-arch-fromcargo.sh  build-arch.sh  implementation_plan.md.resolved  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tontondeck-setup.sh  vite.config.ts
.github/workflows/: build.yml
.jules/: bolt.md
SLSsteam-main/: .mailmap  Makefile  flake.nix
SLSsteam-main/nix-modules/: default.nix  (+1 more)
__SLSsteam-main/: .gitignore  .gitmodules  Makefile  embed-config.sh  embed-version.sh
__Solus-Manifest-App-main/: .gitignore  App.xaml  App.xaml.cs  DISCORD_CHANGELOG.md  MorrenusApp.csproj  README.md  app.manifest  discord.md
decky-plugin-tonton/: LICENSE  README.md  main.py  package.json  plugin.json  tsconfig.json
flatpak/: com.boilerroom.app.desktop  com.boilerroom.app.metainfo.xml  com.boilerroom.app.yml  com.tontondeck.app.desktop  com.tontondeck.app.metainfo.xml  com.tontondeck.app.yml
source/: PKGBUILD  package-lock.json  package.json
source/src-tauri/: Cargo.toml  steam_cm.rs  tauri.conf.json
source/src-tauri/capabilities/: default.json
source/src-tauri/src/: cloudsync.rs  cloudsync_watcher.rs  config_vdf.rs  install_manager.rs  lib.rs  main.rs  pcgamingwiki.rs  steam_cm.rs  steamless.rs
source/src-tauri/src/commands/: api.rs  cache.rs  cloudsync_commands.rs  depot.rs  depot_keys.rs  installation.rs  library.rs  mod.rs  settings.rs  setup.rs  slssteam.rs  steam_fixes.rs  steam_updates.rs  steamcmd.rs  steamless_commands.rs  tools.rs  update.rs
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: achievements.rs  commands.rs  config_vdf.rs  constants.rs  install_manager.rs  lib.rs  main.rs  steamless.rs
src-tauri/src/commands/: api.rs  connection.rs  depot.rs  installation.rs  library.rs  mod.rs  settings.rs  slssteam.rs  steam_fixes.rs  steamless_commands.rs  tools.rs  transfer.rs
tools/: DepotDownloaderMod.sh  Steamless.sh
verification/: skip_reason.txt
(+302 files in other folders)
